fix date-picker z-index problem

--- a/client/src/components/Events/CreateEventForm/CreateEventForm.module.sass
+++ b/client/src/components/Events/CreateEventForm/CreateEventForm.module.sass
@@ -9,8 +9,6 @@
   padding: 15px 10px
   label
     padding: 10px 0
-  >*
-    z-index: 20
 
 .error
   color: $error-msg-color
@@ -19,4 +17,3 @@
 
 .button
   margin-top: 20px
-  z-index: 15
